--- a/hack/resume.html.tmpl
+++ b/hack/resume.html.tmpl
@@ -219,7 +219,7 @@
 
     <div id='workBlock' class="sectionBlock">
       <div class='sectionName'>
-        <span>EXPERIENCE</span>
+        <span>WORK</span>
       </div>
       <div class='sectionContent'>
         {{ range $i, $w := .work }}
@@ -247,7 +247,7 @@
 
     <div id='stacks' class="sectionBlock">
       <div class='sectionName'>
-        <span>ENGINEERING STACKS</span>
+        <span>STACKS</span>
       </div>
       <div class='sectionContent'>
         {{ range .stacks }}
