--- a/hack/resume.html.tmpl
+++ b/hack/resume.html.tmpl
@@ -332,7 +332,7 @@
         {{ range .interests }}
         <div class='educationBlock'>
           <span>
-            <i>{{ .title }}<i>
+            {{ .title }}
           </span>
         </div>
         {{ end }}
