--- a/hack/resume.html.tmpl
+++ b/hack/resume.html.tmpl
@@ -312,6 +312,9 @@
           <span>
             {{ .course }}
           </span>
+          <span class='url'>
+            <a href='{{ .url }}'>{{ .url }}</a>
+          </span>
           <span class='date'>
             {{ .endDate }}
           </span>
