--- a/hack/resume.html.tmpl
+++ b/hack/resume.html.tmpl
@@ -313,7 +313,7 @@
             {{ .course }}
           </span>
           <span class='url'>
-            <a href='{{ .url }}'>{{ .url }}</a>
+            <a href='{{ .url }}'>{{ .link }}</a>
           </span>
           <span class='date'>
             {{ .endDate }}
